# instance_segmentation

./: .gitignore
Ubquity_Robotics_Gen6s/controllers/my_controller/: my_controller  my_controller.cpp
Ubquity_Robotics_Gen6s/protos/: gen6s-v1.proto
Ubquity_Robotics_Gen6s/worlds/: .Gen6s v1.0.0.wbproj  .Gen6s v1.0.1.wbproj  .Gen6s v1.0.2.wbproj  .Gen6s v1.0.3.wbproj  Gen6s v1.0.0.wbt  Gen6s v1.0.1.wbt  Gen6s v1.0.2.wbt  Gen6s v1.0.3.wbt  Gen6s v1.0.4.wbt
gen6s/gen6s/: CMakeLists.txt  README.md  package.xml
gen6s/gen6s_bnw/: CMakeLists.txt  package.xml
gen6s/gen6s_bnw/launch/: gen6s_bnw_launch.py
gen6s/gen6s_bnw/src/: gen6s_bnw_node.cpp
gen6s/gen6s_character_detection/: CMakeLists.txt  README.md  package.xml
gen6s/gen6s_character_detection/src/: char_recognition_node.cpp
gen6s/gen6s_color/: CMakeLists.txt  README.md  package.xml
gen6s/gen6s_color/launch/: gen6s_color_launch.py
gen6s/gen6s_color/src/: gen6s_color_node.cpp
gen6s/gen6s_description/: CMakeLists.txt  README.md  package.xml
gen6s/test_diff_robot/: CMakeLists.txt  README.md  package.xml
gen6s/test_diff_robot/config/: controllers.yaml  diff_drive_controller.yaml  gz_bridge.yaml  my_controllers.yaml  robot_config.rviz
gen6s/test_diff_robot/launch/: re_test_diff_robot.launch copy.py  re_test_diff_robot.launch.py  re_test_diff_robot2.launch.py  robot_launch.py  test_diff_robot.launch copy.py  test_diff_robot.launch.py  test_diff_robot.urdf.launch.py
gen6s/test_diff_robot/urdf/: test_diff_robot.urdf
gen6s/test_diff_robot/urdf/robots/: Ros2_control.xacro  articubot.xacro  camera.xacro  castorfix.txt  diff_drive_robot.infloor.urdf.xacro  diff_drive_robot.infloor2.urdf.xacro  diff_drive_robot.urdf  diff_drive_robot.urdf.copy.xacro  diff_drive_robot.urdf.xacro  expanded_robot.urdf  expanded_robot_description.urdf  gazebo_control.xacro  inertial_macros.xacro  robot.urdf  robot.urdf.xacro  ros2_control.xacro  test_diff_robot.urdf copy.xacro  test_diff_robot.urdf.xacro  test_diff_robot_main.urdf.xacro
intro_room/: CMakeLists.txt  README.md  my_robot_driver.xml  package.xml
intro_room/src/: MyRobotDriver.cpp  node1.cpp
